--- a/createAccount.html
+++ b/createAccount.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Log In</title>
-  <link rel="stylesheet" type="text/css" href="style.css" />
-</head>
 
 <body>
 
@@ -15,8 +7,8 @@
     
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" /><br />
-    <label for="pw">Password:</label>
-    <input type="password" id="pw" name="pw" /><br />
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" /><br />
     <input type="submit" value="Create Account" name="submit" />
   </form>
   </div>
