--- a/header.html
+++ b/header.html
@@ -15,16 +15,14 @@
   </div>
 	<div class="login"><form method="post" action="login.php">
     <div class="username"><label for="username">Username:</label><br /><input type="text" id="username" name="username" /><br />
-   <a href="createAccount.html">Create an Account</a></div> 
-    <div class="password"><label for="pw">Password:</label><br /><input type="password" id="pw" name="pw" /><br />
+   <a href="createAccount.php">Create an Account</a></div> 
+    <div class="password"><label for="password">Password:</label><br /><input type="password" id="password" name="password" /><br />
     <input name="submit" type="submit" class="password" value="Login" /></div>
     </form>
   </div>
 	<img src="images/headerbar.jpg" width="890" height="16">
 </div>
-<div class="mainImage">
-  <div id="coasterPic"></div>
-  <div id="wave"><img src="images/curve.png" width="890" height="150" /></div>
+
 </div>
 
 </body>
