I think everything works

--- a/header.html
+++ b/header.html
@@ -11,18 +11,18 @@
 <div class="content">
 <div class="header">
   <div class="logo">Theme Park Travel Guide<br /><br />
-  <a href='newpark.php'>Add Park</a> | <a href='search.php'>Search Parks</a> | <a href='editparks.php'>Edit Parks</a>
+  <a href='home.php'>Home</a> |
+  <a href='newpark.php'>Add Park</a> | <a href='search.php'>Search Parks</a> | <a href='editPark.php'>Edit Parks</a>
   </div>
 	<div class="login"><form method="post" action="login.php">
     <div class="username"><label for="username">Username:</label><br /><input type="text" id="username" name="username" /><br />
-   <a href="createAccount.php">Create an Account</a></div> 
+   <a href="createAccount.html">Create an Account</a></div> 
     <div class="password"><label for="password">Password:</label><br /><input type="password" id="password" name="password" /><br />
     <input name="submit" type="submit" class="password" value="Login" /></div>
     </form>
   </div>
 	<img src="images/headerbar.jpg" width="890" height="16">
 </div>
-
 </div>
 
 </body>
