Fixed some minor URL issues in the pages

--- a/page.html
+++ b/page.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>widget - Free CSS Template by spyka Webmaster</title>
-<link rel="stylesheet" href="stylesheets/styles.css" type="text/css" />
+<link rel="stylesheet" href="styles.css" type="text/css" />
 			
             
 <script type="text/javascript" src="js/jquery.js"></script>
@@ -30,7 +30,7 @@ License: Creative Commons Attribution
     </div>
     <div id="nav">
     	<ul class="sf-menu dropdown">
-        	<li><a href="index.html">Home</a></li>
+        	<li><a href="index.php">Home</a></li>
             <li class="selected"><a class="has_submenu" href="examples.html">Examples</a>
             	<ul>
                 	<li class="selected"><a href="page.html">Static Text Page</a></li>
@@ -73,7 +73,7 @@ License: Creative Commons Attribution
                <li>
                     <h4><span>Our <strong>Pages</strong></span></h4>
                     <ul class="blocklist">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.php">Home</a></li>
                         <li><a href="examples.html">Examples</a></li>
                         <li><a href="#">Products</a></li>
                         <li><a href="#">Solutions</a></li>
