--- a/noslides.html
+++ b/noslides.html
@@ -30,7 +30,7 @@ License: Creative Commons Attribution
     </div>
     <div id="nav">
     	<ul class="sf-menu dropdown">
-        	<li><a href="index.html">Home</a></li>
+        	<li><a href="index.php">Home</a></li>
             <li class="selected"><a class="has_submenu" href="examples.html">Examples</a>
             	<ul>
                 	<li><a href="page.html">Static Text Page</a></li>
@@ -101,7 +101,7 @@ License: Creative Commons Attribution
                <li>
                     <h4><span>Our <strong>Pages</strong></span></h4>
                     <ul class="blocklist">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.php">Home</a></li>
                         <li><a href="examples.html">Examples</a></li>
                         <li><a href="#">Products</a></li>
                         <li><a href="#">Solutions</a></li>
