added themeguru to db

--- a/header.html
+++ b/header.html
@@ -16,7 +16,7 @@
   </div>
 	<div class="login"><form method="post" action="login.php">
     <div class="username"><label for="username">Username:</label><br /><input type="text" id="username" name="username" /><br />
-   <a href="createAccount.php">Create an Account</a></div> 
+   <a href="createAccount.html">Create an Account</a></div> 
     <div class="password"><label for="password">Password:</label><br /><input type="password" id="password" name="password" /><br />
     <input name="submit" type="submit" class="password" value="Login" /></div>
     </form>
